--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #000000;
+            color: 	#C2B280;
             display: flex;
             justify-content:center;
             align-items:center;
@@ -101,7 +101,7 @@ function dispalyGreetings(today){
         else if (hrs >= 12 && hrs <= 17)
             greet = 'Tünaydın, Nisa';
         else if (hrs >= 17 && hrs <= 24)
-            greet = 'İyi Akşamlar, Nisa';
+            greet = 'iyi Akşamlar, Nisa';
         document.getElementById('greet').innerHTML = greet;
 
     }
