--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function dispalyGreetings(today){
         else if (hrs >= 12 && hrs <= 17)
             greet = 'Tünaydın, Nisa';
         else if (hrs >= 17 && hrs <= 24)
-            greet = 'iyi Akşamlar, Nisa';
+            greet = 'Iyi Akşamlar, Nisa';
         document.getElementById('greet').innerHTML = greet;
 
     }
